k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: javaline
  labels:
    app: javaline
